--- a/index.html
+++ b/index.html
@@ -8,65 +8,55 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
-    <h1>HTML Projects Page</h1>
     <div class="container">
       <main class="main-content">
         <header>
-          <nav class="top-nav">
-            <a href="#about" class="nav-link" title="About">
-              <span>About</span>
-            </a>
-            <a href="#projects" class="nav-link" title="Projects">
-              <span>Projects</span>
-            </a>
-            <a href="#contact" class="nav-link" title="Contact">
-              <span>Contact</span>
-            </a>
-            <a href="#html" class="nav-link" title="HTML">
-              <span>HTML</span>
-            </a>
+          <nav>
+            <a href="#about" title="About">About</a>
+            <a href="#projects" title="Projects">Projects</a>
+            <a href="#contact" title="Contact">Contact</a>
+            <a href="#html" title="HTML">HTML</a>
           </nav>
         </header>
 
-        <section class="hero" id="about">
-          <div class="hero-text">
+        <section id="about">
+          <div>
             <h1>My HTML<br />Projects</h1>
             <h2>Showcase</h2>
-            <p class="hero-subtitle">
+            <p>
               Explore 6 amazing projects built during my HTML learning journey
               at TAP Academy under Trainer Harshit Sir's guidance.
             </p>
           </div>
-          <div class="stats-box">
-            <div class="stat-item">
-              <span class="stat-number">6+</span>
-              <span class="stat-label">Projects Built</span>
+          <div>
+            <div>
+              <span>6+</span>
+              <span>Projects Built</span>
             </div>
-            <div class="stat-item">
-              <span class="stat-number">100%</span>
-              <span class="stat-label">Pure HTML</span>
+            <div>
+              <span>100%</span>
+              <span>Pure HTML</span>
             </div>
-            <div class="stat-item">
-              <span class="stat-number">∞</span>
-              <span class="stat-label">Possibilities</span>
+            <div>
+              <span>∞</span>
+              <span>Possibilities</span>
             </div>
           </div>
         </section>
 
-        <section class="info-section" id="html">
-          <div class="info-content">
-            <h3 class="info-title">HyperText Markup Language</h3>
+        <section id="html">
+          <div>
+            <h3>HyperText Markup Language</h3>
             <p>
               At TAP Academy, we believe in learning by doing. Under the
               guidance of Trainer Harshit Sir, you'll not only understand HTML
               concepts but also apply them through hands-on projects.
             </p>
-            <div class="info-grid">
-              <div class="info-card">Semantic Elements</div>
-              <div class="info-card">Forms & Inputs</div>
-              <div class="info-card">Tables & Lists</div>
-              <div class="info-card">Multimedia</div>
+            <div>
+              <div>Semantic Elements</div>
+              <div>Forms & Inputs</div>
+              <div>Tables & Lists</div>
+              <div>Multimedia</div>
             </div>
           </div>
         </section>
@@ -145,16 +135,16 @@
           </a>
         </section>
 
-        <footer class="contact-section" id="contact">
-          <h2 class="contact-title">Let's Connect</h2>
-          <div class="contact-container">
-            <div class="contact-info-item">
+        <footer id="contact">
+          <h2>Let's Connect</h2>
+          <div>
+            <div>
               <p>Email</p>
               <a href="mailto:vishnupriya4499s@gmail.com" target="_blank">
                 vishnupriya4499s@gmail.com</a
               >
             </div>
-            <div class="contact-info-item">
+            <div>
               <p>LinkedIn</p>
               <a
                 href="https://www.linkedin.com/in/vishnu-priya-reddy-05ba4725a/"
@@ -162,7 +152,7 @@
                 >vishnu-priya-reddy-05ba4725a</a
               >
             </div>
-            <div class="contact-info-item">
+            <div>
               <p>GitHub</p>
 
               <a
@@ -171,12 +161,12 @@
                 >VishnupriyaReddy-creater</a
               >
             </div>
-            <div class="contact-info-item">
+            <div>
               <p>Phone</p>
               <p>+91 8919115658</p>
             </div>
           </div>
-          <div class="footer-copyright">
+          <div>
             &copy; 2026 Vishnu Priya Reddy. All rights reserved.
           </div>
         </footer>
