--- a/project2.html
+++ b/project2.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Myself</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="container">
     <h1>My Life & Skills Portfolio</h1>
     <h2>Profile Summary</h2>
     <p>
@@ -89,5 +91,7 @@
         </ul>
       </li>
     </ol>
+    </ol>
+    </div>
   </body>
 </html>
