--- a/project3.html
+++ b/project3.html
@@ -4,99 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Time table</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap"
-    />
-    <style>
-      body {
-        background-color: #0f172a;
-        color: #f1f5f9;
-        text-align: center;
-        font-family: "Outfit", sans-serif;
-      }
-      h1 {
-        color: #0ea5e9;
-        text-align: center;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-      }
-      table {
-        background-color: #1e293b;
-        margin-left: auto;
-        margin-right: auto;
-        border-collapse: collapse;
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      th,
-      td {
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        padding: 15px; /* Replicating cellpadding somewhat, though attribute still exists */
-      }
-      th {
-        background-color: #334155;
-        color: #0ea5e9;
-        font-weight: 600;
-        text-transform: uppercase;
-      }
-    </style>
+    <title>Time table</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <h1>JAVA FULL STACK DEVELOPMENT -TAP ACADEMY</h1>
-    <table
-      border="2"
-      cellspacing="5"
-      cellpadding="20"
-      style="text-align: center"
-    >
-      <tr>
-        <th>Day</th>
-        <th>9-10 AM</th>
-        <th>10-11 AM</th>
-        <th>11-12 PM</th>
-        <th>1-2 PM</th>
-        <th>2-4 PM</th>
-      </tr>
-      <tr>
-        <th>Monday</th>
-        <td>MySQL</td>
-        <td>Java</td>
-        <td>SoftSkills</td>
-        <td rowspan="5">Lunch Break</td>
-        <td>Mock</td>
-      </tr>
-      <tr>
-        <th>Tuesday</th>
-        <td colspan="2">Project Class</td>
-        <td>Programming</td>
-        <td>CSS</td>
-      </tr>
-      <tr>
-        <th>Wednesday</th>
-        <td>HTML</td>
-        <td>Python</td>
-        <td>DSA</td>
-        <td rowspan="2">Front End Project</td>
-      </tr>
-      <tr>
-        <th>Thursday</th>
-        <td>Java</td>
-        <td colspan="2">React JS</td>
-      </tr>
-      <tr>
-        <th>Friday</th>
-        <td>Programming</td>
-        <td>Java</td>
-        <td>DSA</td>
-        <td>JavaScript</td>
-      </tr>
-      <tr>
-        <td colspan="6" style="text-align: center">
-          Note:Friday 2-4 PM is Optional activity slot.
-        </td>
-      </tr>
-    </table>
+    <div class="container">
+      <h1>JAVA FULL STACK DEVELOPMENT -TAP ACADEMY</h1>
+      <table>
+        <tr>
+          <th>Day</th>
+          <th>9-10 AM</th>
+          <th>10-11 AM</th>
+          <th>11-12 PM</th>
+          <th>1-2 PM</th>
+          <th>2-4 PM</th>
+        </tr>
+        <tr>
+          <th>Monday</th>
+          <td>MySQL</td>
+          <td>Java</td>
+          <td>SoftSkills</td>
+          <td rowspan="5">Lunch Break</td>
+          <td>Mock</td>
+        </tr>
+        <tr>
+          <th>Tuesday</th>
+          <td colspan="2">Project Class</td>
+          <td>Programming</td>
+          <td>CSS</td>
+        </tr>
+        <tr>
+          <th>Wednesday</th>
+          <td>HTML</td>
+          <td>Python</td>
+          <td>DSA</td>
+          <td rowspan="2">Front End Project</td>
+        </tr>
+        <tr>
+          <th>Thursday</th>
+          <td>Java</td>
+          <td colspan="2">React JS</td>
+        </tr>
+        <tr>
+          <th>Friday</th>
+          <td>Programming</td>
+          <td>Java</td>
+          <td>DSA</td>
+          <td>JavaScript</td>
+        </tr>
+        <tr>
+          <td colspan="6">Note:Friday 2-4 PM is Optional activity slot.</td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
