--- a/project4.html
+++ b/project4.html
@@ -4,131 +4,134 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Vishnu Priya Reddy</h1>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="container">
+      <h1>Vishnu Priya Reddy</h1>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <main>
-      <section id="about">
-        <h2>Portfolio</h2>
-        <p>
-          Hi! I'm a passionate developer and learner. Here you'll find
-          information about my education, projects, and how to get in touch with
-          me.
-        </p>
-      </section>
+      <main>
+        <section id="about">
+          <h2>Portfolio</h2>
+          <p>
+            Hi! I'm a passionate developer and learner. Here you'll find
+            information about my education, projects, and how to get in touch
+            with me.
+          </p>
+        </section>
 
-      <section id="education">
-        <h2>Education</h2>
-        <article>
-          <h3>B.E in Computer Science</h3>
-          <p>
-            <strong>Study world college of enginnering</strong> | Graduation:
-            2026
-          </p>
-          <p>
-            Relevant coursework: Data Structures, Web Development, Database
-            Design, Software Engineering
-          </p>
-        </article>
-        <article>
-          <h3>Python and Data Analysis</h3>
-          <p><strong>Internship</strong> | Completed: 2025</p>
-          <p>
-            During my internship in Python and Data Analytics, I worked with
-            real-world datasets to clean, analyze, and visualize data using
-            tools like Pandas and NumPy.
-          </p>
-        </article>
-        <article>
-          <h3>Java fullstack development</h3>
-          <p><strong>Internship</strong> | Completed: 2026</p>
-          <p>
-            During my internship in Java fullstack development, I worked on
-            building scalable web applications using Java, Spring Boot, and
-            React.
-          </p>
-        </article>
-      </section>
+        <section id="education">
+          <h2>Education</h2>
+          <article>
+            <h3>B.E in Computer Science</h3>
+            <p>
+              <strong>Study world college of enginnering</strong> | Graduation:
+              2026
+            </p>
+            <p>
+              Relevant coursework: Data Structures, Web Development, Database
+              Design, Software Engineering
+            </p>
+          </article>
+          <article>
+            <h3>Python and Data Analysis</h3>
+            <p><strong>Internship</strong> | Completed: 2025</p>
+            <p>
+              During my internship in Python and Data Analytics, I worked with
+              real-world datasets to clean, analyze, and visualize data using
+              tools like Pandas and NumPy.
+            </p>
+          </article>
+          <article>
+            <h3>Java fullstack development</h3>
+            <p><strong>Internship</strong> | Completed: 2026</p>
+            <p>
+              During my internship in Java fullstack development, I worked on
+              building scalable web applications using Java, Spring Boot, and
+              React.
+            </p>
+          </article>
+        </section>
 
-      <section id="projects">
-        <h2>Projects</h2>
-        <article>
-          <h3>Employee data analysis</h3>
-          <p><strong>Technologies:</strong> Python</p>
-          <p>
-            Built a full-stack e-commerce application with product catalog,
-            shopping cart, and payment integration.
-          </p>
-        </article>
-        <article>
-          <h3>Task Management App</h3>
-          <p><strong>Technologies:</strong> Vue.js, Firebase, JavaScript</p>
-          <p>
-            Developed a real-time task management application with user
-            authentication, drag-and-drop functionality, and data persistence.
-          </p>
-        </article>
-      </section>
+        <section id="projects">
+          <h2>Projects</h2>
+          <article>
+            <h3>Employee data analysis</h3>
+            <p><strong>Technologies:</strong> Python</p>
+            <p>
+              Built a full-stack e-commerce application with product catalog,
+              shopping cart, and payment integration.
+            </p>
+          </article>
+          <article>
+            <h3>Task Management App</h3>
+            <p><strong>Technologies:</strong> Vue.js, Firebase, JavaScript</p>
+            <p>
+              Developed a real-time task management application with user
+              authentication, drag-and-drop functionality, and data persistence.
+            </p>
+          </article>
+        </section>
 
-      <section id="contact">
-        <h2>Contact Me</h2>
-        <div>
-          <p>
-            Email:
-            <a href="mailto:vishnupriya4499s@gmail.com"
-              >vishnupriya4499s@gmail.com</a
-            >
-          </p>
-          <p>
-            LinkedIn:
-            <a
-              href="https://www.linkedin.com/in/vishnu-priya-reddy-05ba4725a/"
-              target="_blank"
-              >View Profile</a
-            >
-          </p>
-          <p>
-            GitHub:
-            <a
-              href="https://github.com/VishnupriyaReddy-creater"
-              target="_blank"
-              >View GitHub</a
-            >
-          </p>
-        </div>
+        <section id="contact">
+          <h2>Contact Me</h2>
+          <div>
+            <p>
+              Email:
+              <a href="mailto:vishnupriya4499s@gmail.com"
+                >vishnupriya4499s@gmail.com</a
+              >
+            </p>
+            <p>
+              LinkedIn:
+              <a
+                href="https://www.linkedin.com/in/vishnu-priya-reddy-05ba4725a/"
+                target="_blank"
+                >View Profile</a
+              >
+            </p>
+            <p>
+              GitHub:
+              <a
+                href="https://github.com/VishnupriyaReddy-creater"
+                target="_blank"
+                >View GitHub</a
+              >
+            </p>
+          </div>
 
-        <form>
-          <h3>Send me a Message</h3>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
-          <br /><br />
+          <form>
+            <h3>Send me a Message</h3>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required />
+            <br /><br />
 
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-          <br /><br />
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
+            <br /><br />
 
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" required rows="5"></textarea>
-          <br /><br />
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required rows="5"></textarea>
+            <br /><br />
 
-          <button type="submit">Send</button>
-        </form>
-      </section>
-    </main>
+            <button type="submit">Send</button>
+          </form>
+        </section>
+      </main>
 
-    <footer>
-      <p>&copy; 2026 Vishnu Priya Reddy. All rights reserved.</p>
-    </footer>
+      <footer>
+        <p>&copy; 2026 Vishnu Priya Reddy. All rights reserved.</p>
+      </footer>
+    </div>
   </body>
 </html>
