--- a/project5.html
+++ b/project5.html
@@ -3,54 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Course Registration Form</title>
-       
-        <style>
-
-            body {
-                font-family: 'Outfit', sans-serif;
-                background-color: #0f172a;
-                color: #f1f5f9;
-            }
-            h1 {
-                color: #0ea5e9;
-                text-align: center;
-                text-transform: uppercase;
-                letter-spacing: 1px;
-            }
-            fieldset {
-                background-color: #1e293b;
-                border: 1px solid rgba(255, 255, 255, 0.1);
-                border-radius: 10px;
-                padding: 1.5rem;
-                box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-            }
-            label {
-                color: #cbd5e1;
-            }
-            input, select, textarea {
-                background-color: #0f172a;
-                border: 1px solid #334155;
-                color: #f1f5f9;
-                padding: 0.5rem;
-                border-radius: 4px;
-            }
-            button {
-                background-color: #0ea5e9;
-                color: white;
-                border: none;
-                padding: 0.5rem 1rem;
-                border-radius: 4px;
-                cursor: pointer;
-                text-transform: uppercase;
-                font-weight: bold;
-            }
-            button:hover {
-                background-color: #0284c7;
-            }
-        </style>
-	</head>
-	<body>
-		<h1>Course Registration Form</h1>
+    <title>Course Registration Form</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+    <h1>Course Registration Form</h1>
 		<form action="">
 			<fieldset>
                 <legend>Personal Detils</legend>
@@ -128,5 +86,6 @@
                 <button type="submit">submit</button>
             </fieldset>
 		</form>
+        </div>
 	</body>
 </html>
