Added new CSS file

--- a/project4.html
+++ b/project4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles1.css" />
   </head>
   <body>
     <div class="container">
@@ -65,22 +65,25 @@
 
         <section id="projects">
           <h2>Projects</h2>
-          <article>
-            <h3>Employee data analysis</h3>
-            <p><strong>Technologies:</strong> Python</p>
-            <p>
-              Built a full-stack e-commerce application with product catalog,
-              shopping cart, and payment integration.
-            </p>
-          </article>
-          <article>
-            <h3>Task Management App</h3>
-            <p><strong>Technologies:</strong> Vue.js, Firebase, JavaScript</p>
-            <p>
-              Developed a real-time task management application with user
-              authentication, drag-and-drop functionality, and data persistence.
-            </p>
-          </article>
+          <div class="projects-container">
+            <article>
+              <h3>Employee data analysis</h3>
+              <p><strong>Technologies:</strong> Python</p>
+              <p>
+                Built a full-stack e-commerce application with product catalog,
+                shopping cart, and payment integration.
+              </p>
+            </article>
+            <article>
+              <h3>Task Management App</h3>
+              <p><strong>Technologies:</strong> Vue.js, Firebase, JavaScript</p>
+              <p>
+                Developed a real-time task management application with user
+                authentication, drag-and-drop functionality, and data
+                persistence.
+              </p>
+            </article>
+          </div>
         </section>
 
         <section id="contact">
